src/test/ui/parser/attr-before-eof.stderr
error: expected item after attributes
  --> $DIR/attr-before-eof.rs:13:16
   |
LL | #[derive(Debug)] //~ERROR expected item after attributes
   |                ^

error: aborting due to previous error

